# hvac

./: .gitignore  CMakeLists.txt  CMakeListsJalanLari.txt  Floor.body  HVAC.cnoid  README.md  calc_leg.py  diff_stat.txt  fall_debug.csv  package.xml  robot_besar.cnoid  run.sh  run_jalan_lari.sh  test_fk.py  test_kinematics.py  test_kinematics2.py  test_kinematics3.py
.agents/: AGENTS.md
backup_before_floor_fd_20260524/: cobagerakin_nodes_robot_besar.cnoid
backup_full_env_20260524_115935/: cobagerakin_nodes_robot_besar.cnoid  robot_esr_v2.urdf
backup_full_env_20260524_115935/controller/: CMakeLists.txt  CMakeLists.txt.bak_lompat_state  HadapKanan90.cpp  HadapKanan90.cpp.bak_state_all  HadapKanan90.hpp  HadapKanan90.hpp.bak_state_all  JalanDitempat.cpp  JalanMaju.hpp.bak_state  JalanMaju.hpp.bak_state_all  JalanMundur.hpp  Lompat.cpp.bak_state_all  Lompat.hpp.bak_state_all  PutarKanan360.cpp  PutarKiri360.cpp  RobotBesarWalkController.cpp  RobotBesarWalkController.cpp.bak_lompat  RobotContext.cpp  RobotContext.hpp
config/: joint_names_robot_esr_v2.yaml  joint_names_robot_esr_v2_rev.yaml
controller/: CMakeLists.txt  main.cpp
env/: Floor.body
launch/: display.launch  gazebo.launch
meshes/: base_link.STL  body_pitch.STL  head_pitch.STL  head_yaw.STL  left_arm_pitch_1.STL  left_arm_pitch_5.STL  left_arm_roll_1.STL  left_arm_roll_3.STL  left_arm_roll_5.STL  left_arm_yaw_1.STL  left_finger_1.STL  left_finger_3.STL  left_knee_pitch_1.STL  left_knee_pitch_3.STL  left_knee_pitch_5.STL  left_knee_roll_1.STL  left_knee_roll_5.STL  left_thumb_1.STL  left_thumb_3.STL  right_arm_pitch_2.STL  right_arm_pitch_4.STL  right_arm_roll_2.STL  right_arm_roll_4.STL  right_arm_roll_6.STL  right_arm_yaw_2.STL  right_finger_2.STL  right_finger_4.STL  right_knee_pitch_2.STL  right_knee_pitch_4.STL  right_knee_pitch_6.STL  right_knee_roll_2.STL  right_knee_roll_6.STL  right_knee_yaw_2.STL  right_thumb_2.STL  right_thumb_4.STL
project/: bisa_cobagerakin_nodes_robot_besar.cnoid  cobagerakin_nodes_robot_besar.cnoid  (+4 more)
project/controller/: BalanceMarkers.cpp  BalanceMarkers.hpp  CMakeLists.txt  CMakeLists.txt.bak  HadapKiri90.cpp  HadapKiri90.cpp.bak_state_all  HadapKiri90.hpp  HadapKiri90.hpp.bak_state_all  JalanDitempat.cpp.bak_state_all  JalanDitempat.hpp  JalanDitempat.hpp.bak_state_all  JalanMaju.cpp  JalanMaju.cpp.bak_state  JalanMaju.hpp  Lompat.cpp  Lompat.cpp.bak_bungkuk_dof  Lompat.hpp  PutarKanan360.hpp  PutarKiri360.cpp.bak_state_all  RobotBesarMinimumController.cpp  RobotBesarWalkController.cpp  RobotContext.cpp  RobotContext.hpp  jalan_lari.cpp  nyobarobotjalan.cpp  test_ik.cpp  test_recovery.cpp
project/controller/sensors/: ContactSensor.cpp  ContactSensor.hpp  ImuSensor.cpp  ImuSensor.hpp  JointSensor.cpp  JointSensor.hpp  RobotState.hpp  SensorConfig.hpp  SensorManager.cpp  SensorManager.hpp  SensorTypes.hpp
(+59 files in other folders)
